--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,8 +1,9 @@
 .wrapper--overlayScroll {
-    position: relative;
+    position: fixed;
+    top: 50%;
+    right: 1.25rem;
+    transform: translateY(-50%);
     font-family: 'Roboto', sans-serif;
-    flex-shrink: 0;
-    margin: 0.5em 1.25em;
     color: var(--primaryColor);
 }
 
